--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,18 @@
   cursor: pointer;
 }
 
+.popup__button_disabled {
+  color: #000;
+  background-color: transparent;
+  border: solid 1px #000000;
+  opacity: 20%;
+  cursor: none;
+}
+
+.popup__button_disabled:hover {
+  background: transparent;
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
