--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,19 @@
   margin-bottom: 0;
 }
 
+.popup__input-error {
+  display: none;
+}
+
+.popup__input-error_active {
+  display: block;
+  color: red;
+}
+
+.popup__input_type_error {
+  border-bottom: 1px solid red;
+} 
+
 @media screen and (max-width: 568px) {
   .popup__title {
     font-size: 12px;
