--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -6,7 +6,35 @@
   border-radius: 50%;
   background-size: cover;
   background-position: center;
+  cursor: pointer;
+}
+.profile__image_wrapper {
+  position: relative;
+  width: 120px;
+  height: 120px;
   margin: 0 29px 0 0;
+}
+
+.profile__image_wrapper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url('../../../images/Vector.svg');
+  background-repeat: no-repeat;
+  background-size: 26px 26px;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.profile__image_wrapper:hover::after {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
